--- a/main.css
+++ b/main.css
@@ -104,7 +104,8 @@ figcaption span {
     padding-left: 400px;
     padding-right: 400px;
     background-color: white;
-    
+    padding-bottom: 20px;
+    padding-top: 20px;
 }.article p {
     font-size: 1.25rem;
     line-height: 1.875rem;
@@ -169,6 +170,7 @@ figcaption span {
     width: 100%;
     display: flex;
     border-top: 6px double hsla(60, 8%, 91%, 1);
+    padding-top: 10px;
 }
 .homepage {
     text-decoration: none;
@@ -189,11 +191,94 @@ li a:hover {
 
 
 li {
-    padding: 5px 60px 5px 0px;
+    padding: 4px 67px 5px 0px;
     font-family:  'times new roman',times,serif;
     font-size: 0.85rem;
     width: 100%;
+    margin: 0;
+    border: 0;
 }
 .list {
     display: flex;
+}
+#unlock h5 {
+    display: inline;
+    margin: 0;
+    font-size: 1.05rem;
+    border-top: 1px solid hsla(60, 8%, 91%, 1); 
+    padding-top: 10px;
+}
+#unlock a {
+    
+    text-decoration: none;
+    color: #395F82;
+    font-size: 0.95rem;
+    border-bottom: 1px solid hsla(60, 8%, 91%, 1);
+    padding-bottom: 10px; 
+}
+.last-footer a{
+    text-decoration: none;
+    color:#666;
+    font-size: 11px;
+    font-family: nyt-franklin,helvetica,arial,sans-serif;
+    
+}
+.last-footer {
+    text-align: center;
+    border-top: 1px solid hsla(60, 8%, 91%, 1);
+    padding-top: 15px;
+    padding-bottom: 80px;
+    
+}
+.last-footer span {
+    padding-left: 9px;
+}
+.last-footer a:hover {
+    text-decoration: underline;
+}
+.expand {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 1px solid black;
+    background-color: white;
+}
+.expand-work {
+    justify-content: space-between;
+    display: flex;
+}
+.expand-work-access a {
+    text-decoration: none;
+    color: black;
+    padding-left: 450px;
+}
+.expand-work-expand a {
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    font-weight: bolder;
+    padding-right: 100px;
+}
+.strong {
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+    color: rgb(0, 0, 0);
+    font-weight: 700;
+    font-size: 15px;
+}
+.light, .light1 {
+    font-size: 11px;
+    font-weight: 500;
+    font-family: nyt-franklin, helvetica, arial, sans-serif;
+}
+#light {
+    padding-top: 17px;
+}
+#light2 {
+    padding-top: 17px;
+    border-top: 1px solid hsla(60, 8%, 91%, 1);
+}
+#subscribe {
+    border-left: 1px solid hsla(60, 8%, 91%, 1);
 }
