--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ body {
     height: 34px;
     font-size: 12px;
     font-weight: bolder;
-    background-color: #395F82;
+    background-color: steelblue;
     color: white;
     border: 1px solid;
     cursor: pointer;
@@ -106,6 +106,7 @@ figcaption span {
     background-color: white;
     padding-bottom: 20px;
     padding-top: 20px;
+    
 }.article p {
     font-size: 1.25rem;
     line-height: 1.875rem;
@@ -142,7 +143,8 @@ figcaption span {
     padding-right: 35px;
 }
 .points-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     
 }
 .pics {
